# owlet_sock_2_hack

./: gdb.txt  ra.cfg
efm32lg/: Cargo.toml  build.rs  memory.x
efm32lg/src/: main.rs
